Few improvements on core-library and order-service