@@ -10,16 +10,14 @@ import org.springframework.security.oauth2.client.OAuth2AuthorizedClientManager;
 import org.springframework.security.oauth2.client.registration.ClientRegistration;
 
 import java.util.Collection;
-import java.util.Collections;
-
-import static java.util.Objects.isNull;
+import java.util.Set;
 
 @Slf4j
 @RequiredArgsConstructor
 public class OAuthClientCredentialsFeignManager {
-    private final Authentication principal = createPrincipal();
-    private final OAuth2AuthorizedClientManager manager;
     private final ClientRegistration clientRegistration;
+    private final OAuth2AuthorizedClientManager authorizedClientManager;
+    private final Authentication principal = createPrincipal();
 
     public String getAccessToken() {
         try {
@@ -28,10 +26,11 @@ public class OAuthClientCredentialsFeignManager {
                     .principal(principal)
                     .build();
 
-            OAuth2AuthorizedClient client = manager.authorize(authorizeRequest);
-            if (isNull(client)) {
-                throw new IllegalStateException("client credentials flow on " + clientRegistration.getRegistrationId() +
-                        " failed, client is null");
+            OAuth2AuthorizedClient client = authorizedClientManager.authorize(authorizeRequest);
+            if (client == null) {
+                throw new IllegalStateException(String.format(
+                        "Client credentials flow on %s failed, client is null",
+                        clientRegistration.getRegistrationId()));
             }
 
             return client.getAccessToken().getTokenValue();
@@ -47,7 +46,7 @@ public class OAuthClientCredentialsFeignManager {
 
             @Override
             public Collection<? extends GrantedAuthority> getAuthorities() {
-                return Collections.emptySet();
+                return Set.of();
             }
 
             @Override
